project/stage/parse_tests/tests/reject/bad_statements/bad_expr_with_key_access/bad_nested_expr.ul
void m() {
    expr [ ((( expr [((1_))] ))) ];
}
